update gallery images

--- a/index.html
+++ b/index.html
@@ -246,14 +246,22 @@
             <h2 class="text-4xl font-bold text-white">HALL OF SHAME / FAME</h2>
             <p class="text-xl text-gray-400 mt-2 mb-12">在社群上分享你的派對照片，標註 <span class="text-pink-400 font-bold">#DRUNKLANDCHALLENGE</span></p>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="http://googleusercontent.com/file_content/8" alt="派對照片-直接開喝" class="w-full h-full object-cover"></div>
-                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="http://googleusercontent.com/file_content/7" alt="派對照片-溫馨餵酒" class="w-full h-full object-cover"></div>
-                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="http://googleusercontent.com/file_content/6" alt="派對照片-男子漢對決" class="w-full h-full object-cover"></div>
-                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="http://googleusercontent.com/file_content/2" alt="派對照片-友情印記" class="w-full h-full object-cover"></div>
-                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="http://googleusercontent.com/file_content/5" alt="派對照片-勝利手勢" class="w-full h-full object-cover"></div>
-                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="http://googleusercontent.com/file_content/1" alt="派對照片-歡樂瞬間" class="w-full h-full object-cover"></div>
-                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="http://googleusercontent.com/file_content/4" alt="派對照片-投入歌唱" class="w-full h-full object-cover"></div>
-                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="http://googleusercontent.com/file_content/10" alt="派對照片-陣亡瞬間" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.43.21.png" alt="截圖 2025-08-14 下午1.43.21" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.43.28.png" alt="截圖 2025-08-14 下午1.43.28" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.43.41.png" alt="截圖 2025-08-14 下午1.43.41" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.43.59.png" alt="截圖 2025-08-14 下午1.43.59" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.44.02.png" alt="截圖 2025-08-14 下午1.44.02" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.44.05.png" alt="截圖 2025-08-14 下午1.44.05" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.44.07.png" alt="截圖 2025-08-14 下午1.44.07" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.44.10.png" alt="截圖 2025-08-14 下午1.44.10" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.44.13.png" alt="截圖 2025-08-14 下午1.44.13" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午1.44.15.png" alt="截圖 2025-08-14 下午1.44.15" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午2.09.47.png" alt="截圖 2025-08-14 下午2.09.47" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/截圖 2025-08-14 下午2.10.01.png" alt="截圖 2025-08-14 下午2.10.01" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/LINE_ALBUM_20250719 （假裝）幫栗子慶生_250814_1.jpg" alt="LINE_ALBUM_20250719_1" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/LINE_ALBUM_20250719 （假裝）幫栗子慶生_250814_2.jpg" alt="LINE_ALBUM_20250719_2" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/LINE_ALBUM_20250719 （假裝）幫栗子慶生_250814_3.jpg" alt="LINE_ALBUM_20250719_3" class="w-full h-full object-cover"></div>
+                <div class="gallery-img rounded-lg overflow-hidden aspect-square"><img src="image/LINE_ALBUM_20250719 （假裝）幫栗子慶生_250814_4.jpg" alt="LINE_ALBUM_20250719_4" class="w-full h-full object-cover"></div>
             </div>
         </div>
     </section>
