--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             <p class="text-lg md:text-2xl text-gray-300 mt-6 max-w-2xl mx-auto font-medium">Next Stop: BLACKOUT. 下一站：友情終點站。</p>
             <div class="mt-10 space-x-4">
                 <div class="flex flex-col gap-4 items-center sm:flex-row sm:gap-0 sm:space-x-4">
-                    <a href="#features" class="btn-primary font-bold py-3 px-8 rounded-full text-lg uppercase transition-transform transform hover:scale-105 w-full sm:w-auto mb-4 sm:mb-0">GET YOUR TICKET</a>
-                    <a href="javascript:void(0)" onclick="alert('規則書PDF下載功能建置中！')" class="btn-secondary font-bold py-3 px-8 rounded-full text-lg uppercase border-2 transition-transform transform hover:scale-105 w-full sm:w-auto">DOWNLOAD RULEBOOK</a>
+                    <a href="#features" class="btn-primary font-bold py-3 px-8 rounded-full text-lg uppercase transition-transform transform hover:scale-105">GET YOUR TICKET</a>
+                    <a href="javascript:void(0)" onclick="alert('規則書PDF下載功能建置中！')" class="btn-secondary font-bold py-3 px-8 rounded-full text-lg uppercase border-2 transition-transform transform hover:scale-105">DOWNLOAD RULEBOOK</a>
                 </div>
             </div>
         </div>
