增加手機版兩個主按鈕的上下間距，避免重疊

--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
             <h2 class="text-3xl md:text-5xl font-black text-blue-400 text-glow-blue mt-2">斷片鐵道</h2>
             <p class="text-lg md:text-2xl text-gray-300 mt-6 max-w-2xl mx-auto font-medium">Next Stop: BLACKOUT. 下一站：友情終點站。</p>
             <div class="mt-10 space-x-4">
-                <a href="#features" class="btn-primary font-bold py-3 px-8 rounded-full text-lg uppercase transition-transform transform hover:scale-105">GET YOUR TICKET</a>
-                <a href="javascript:void(0)" onclick="alert('規則書PDF下載功能建置中！')" class="btn-secondary font-bold py-3 px-8 rounded-full text-lg uppercase border-2 transition-transform transform hover:scale-105">DOWNLOAD RULEBOOKssss</a>
+                <div class="flex flex-col items-center gap-6 md:flex-row md:gap-0 md:space-x-4">
+                    <a href="#features" class="btn-primary font-bold py-3 px-8 rounded-full text-lg uppercase transition-transform transform hover:scale-105">GET YOUR TICKET</a>
+                    <a href="javascript:void(0)" onclick="alert('規則書PDF下載功能建置中！')" class="btn-secondary font-bold py-3 px-8 rounded-full text-lg uppercase border-2 transition-transform transform hover:scale-105">DOWNLOAD RULEBOOK</a>
+                </div>
             </div>
         </div>
     </header>
